fosps-auth/003_authz-fhir-server-epi.yaml

# Copyright 2023 Universidad Politécnica de Madrid
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata: 
  name: auth-fhir-server-epi
  namespace: default
spec:
  selector:
    matchLabels:
      app: fhir-server-epi
  jwtRules:
  - issuer: https://fosps.gravitatehealth.eu/auth/realms/GravitateHealth
    jwksUri: https://fosps.gravitatehealth.eu/auth/realms/GravitateHealth/protocol/openid-connect/certs
---
# auth epi-fhir
# For now GET is open and the rest of endoints needs auth
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authz-epi-fhir
  namespace: default
spec:
  selector:
    matchLabels:
      app: fhir-server-epi
  rules:
    - to:
      - operation:
          methods: ["GET"]
          paths: ["/epi/api/fhir/"]
    - from:
        - source:
            requestPrincipals: ["*"]
