fosps-auth/005_authz-focusing.yaml
# Copyright 2023 Universidad Politécnica de Madrid
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata: 
  name: auth-focusing
  namespace: default
spec:
  selector:
    matchLabels:
      app: focusing
  jwtRules:
  - issuer: https://fosps.gravitatehealth.eu/auth/realms/GravitateHealth
    jwksUri: https://fosps.gravitatehealth.eu/auth/realms/GravitateHealth/protocol/openid-connect/certs
---
# auth ips-fhir
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authz-focusing
  namespace: default
spec:
  selector:
    matchLabels:
      app: focusing
  rules:
    to:
      - operation:
          methods: ["GET"]
          paths: ["/focusing/preprocessing", "/focusing/lenses"]
    to:
      - operation:
          methods: ["POST"]
          paths: ["/focusing/preprocessing/"]
    - from:
        - source:
            requestPrincipals: ["*"]
      to:
        - operation:
            methods: ["POST"]
            paths: ["/focusing/focus/"]
